syntax.output
State 30 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | error RP

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 15 23 28 37 41 64
INT (258) 20 62
FLOAT (259) 63
ID (260) 16 18 19 21 22 57 58 60 61
SEMI (261) 4 5 7 8 31 33 37 40 41
COMMA (262) 10 24 43 65
ASSIGNOP (263) 45 46
RELOP (264) 49
PLUS (265) 50
MINUS (266) 51 55
STAR (267) 52
DIV (268) 53
AND (269) 47
OR (270) 48
DOT (271) 60
NOT (272) 56
TYPE (273) 11
LP (274) 21 22 34 35 36 54 57 58
RP (275) 21 22 23 34 35 36 54 57 58 64
LB (276) 20 59
RB (277) 20 59
LC (278) 13 27
RC (279) 13 15 27 28
STRUCT (280) 13 14
RETURN (281) 33
IF (282) 34 35
ELSE (283) 35
WHILE (284) 36
LOWER_THAN_ELSE (285)
UMINUS (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 26 40
StructSpecifier (38)
    on left: 13 14 15, on right: 12
OptTag (39)
    on left: 16 17, on right: 13
Tag (40)
    on left: 18, on right: 14
VarDec (41)
    on left: 19 20, on right: 9 10 20 26 44 45
FunDec (42)
    on left: 21 22 23, on right: 6 7
VarList (43)
    on left: 24 25, on right: 21 24
ParamDec (44)
    on left: 26, on right: 24 25
CompSt (45)
    on left: 27 28, on right: 6 32
StmtList (46)
    on left: 29 30, on right: 27 29
Stmt (47)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (48)
    on left: 38 39, on right: 13 27 38
Def (49)
    on left: 40 41, on right: 38
DecList (50)
    on left: 42 43, on right: 40 43
Dec (51)
    on left: 44 45, on right: 42 43
Exp (52)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64, on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55 56
    59 60 65 66
Args (53)
    on left: 65 66, on right: 57 65


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI
   15 StructSpecifier: error . RC

    SEMI  shift, and go to state 9
    RC    shift, and go to state 10


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 StructSpecifier: error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 11

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 13

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

   23 FunDec: error . RP

    RP  shift, and go to state 23


State 17

   19 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 20

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 9 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 28
    SEMI   shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 22

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 23

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 24

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 20


State 27

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 43


State 28

   28 CompSt: error . RC

    RC  shift, and go to state 44


State 29

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 30

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   15 StructSpecifier: error . RC
   41 Def: error . SEMI

    SEMI  shift, and go to state 46
    RC    shift, and go to state 10


State 33

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 41

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 34

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


State 35

   38 DefList: Def . DefList

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 35


State 36

   15 StructSpecifier: error . RC

    RC  shift, and go to state 10


State 37

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 38

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 52


State 39

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 53


State 40

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 54

    $default  reduce using rule 25 (VarList)


State 41

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 42

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 43

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 44

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 45

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 30
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 46

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 47

   20 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 27

    $default  reduce using rule 44 (Dec)


State 48

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 49

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 42 (DecList)


State 50

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 51

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 52

   20 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 26 (ParamDec)


State 53

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 54

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 40


State 55

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 56

   28 CompSt: error . RC
   37 Stmt: error . SEMI
   64 Exp: error . RP

    SEMI  shift, and go to state 74
    RP    shift, and go to state 75
    RC    shift, and go to state 44


State 57

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 58

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 59

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 61 (Exp)


State 60

   55 Exp: MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 61

   56 Exp: NOT . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 79


State 62

   54 Exp: LP . Exp RP

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 63

   33 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 81


State 64

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 65

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 83


State 66

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 67

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 68

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 30
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 85
    Stmt      go to state 68
    Exp       go to state 69


State 69

   31 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 70

   45 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 97


State 71

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 72

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 41

    VarDec   go to state 47
    DecList  go to state 98
    Dec      go to state 49


State 73

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 74

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 75

   64 Exp: error RP .

    $default  reduce using rule 64 (Exp)


State 76

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    error  shift, and go to state 77
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


State 77

   64 Exp: error . RP

    RP  shift, and go to state 75


State 78

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 55 (Exp)


State 79

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 56 (Exp)


State 80

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 102
    LB        shift, and go to state 96


State 81

   33 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 82

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
